--- a/HangSwift/Base.lproj/Main.storyboard
+++ b/HangSwift/Base.lproj/Main.storyboard
@@ -59,7 +59,7 @@
                                                 <rect key="frame" x="294" y="0.0" width="70" height="50"/>
                                                 <state key="normal" title="Update" image="icons8-Comments-50"/>
                                                 <connections>
-                                                    <segue destination="EVi-kW-Zdl" kind="presentation" id="rYa-J5-23c"/>
+                                                    <action selector="createBtnPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="has-dG-Rzo"/>
                                                 </connections>
                                             </button>
                                         </subviews>
@@ -678,7 +678,7 @@
         <!--Create PostVC-->
         <scene sceneID="LXO-r6-Vgg">
             <objects>
-                <viewController id="EVi-kW-Zdl" customClass="CreatePostVC" customModule="HangSwift" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="CreatePostVC" id="EVi-kW-Zdl" customClass="CreatePostVC" customModule="HangSwift" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Eer-bm-NOs"/>
                         <viewControllerLayoutGuide type="bottom" id="G2s-0V-6IR"/>
@@ -746,6 +746,9 @@
                                 <color key="textColor" red="0.0" green="0.50196081400000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="25"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                <connections>
+                                    <outlet property="delegate" destination="EVi-kW-Zdl" id="lat-z2-e0b"/>
+                                </connections>
                             </textView>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="g4m-ka-isn">
                                 <rect key="frame" x="0.0" y="596" width="375" height="71"/>
@@ -781,14 +784,14 @@
                     </view>
                     <connections>
                         <outlet property="sendButton" destination="g4m-ka-isn" id="feW-kN-fl9"/>
-                        <outlet property="textField" destination="OyV-zi-keb" id="h2H-of-m9d"/>
+                        <outlet property="textView" destination="OyV-zi-keb" id="Xsn-eH-7yj"/>
                         <outlet property="userProfileImage" destination="oj1-dA-XXb" id="24M-67-rJ5"/>
                         <outlet property="usernameLabel" destination="Wyo-We-QP9" id="ezh-r5-yEX"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KUf-rI-pPO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1237.5999999999999" y="138.98050974512745"/>
+            <point key="canvasLocation" x="854" y="139"/>
         </scene>
         <!--LoginVC-->
         <scene sceneID="2Bt-vl-kx7">
